--- a/Level 26/Classwork/lesson.html
+++ b/Level 26/Classwork/lesson.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    
+</body>
+</html>
+</head>
+<body>
     <table border="2" cel
         <tr>
             <th style="background-color: yellow;">Name</th>
