--- a/Level 30/Homework/lesson.html
+++ b/Level 30/Homework/lesson.html
@@ -69,6 +69,8 @@
     <div class="ferebi rgb"></div>
     <div class="ferebi hex"></div>
     <div class="ferebi hsl"></div>
-    
+    <style>
+        
+    </style>    
 </body>
 </html>
